<resources>
    <string name="app_name">MapRecorder</string>
    <string name="register">register</string>
    <string name="sign_up">Sign up</string>
    <string name="login_rememberMe">Remember me</string>
    <string name="login_keepSignIn">Keep me sign in</string>
    <string name="log_in">Log in</string>
    <string name="login_forgetYourPassword">Forget your password?</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_logo" />
    <string name="confirm_password">Confirm password</string>
    <string name="register_password">Password</string>
    <string name="has_an_account">has an account?</string>
    <string name="register_email">Email</string>
    <string name="register_register_btn">Register</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_cloud">Cloud</string>
    <string name="title_activity_account">Account</string>
    <string name="btn_logout">Sign Out</string>
    <string name="btn_app_settings">Preference</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="title_activity_maps">Map</string>

    // Map control
    <string name="map_control_zoom_in">Zoom In</string>
    <string name="map_control_zoom_out">Zoom Out</string>
    <string name="map_control_location">Location</string>
    <string name="map_control_edit">Edit Map</string>
    <string name="map_control_undo">Undo Change</string>
    <string name="login_username">Username</string>
    <string name="search_text">Search...</string>
    <string name="edit_page_search_text">Search...</string>

    // Array
    <string-array name="search_type">
        <item>name</item>
        <item>city</item>
        <item>owner</item>
    </string-array>
</resources>
