<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_activity_main" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_activity_map" />

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/title_activity_edit" />

    <item
        android:id="@+id/navigation_cloud"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/title_activity_cloud" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_activity_account" />

</menu>
