<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <org.osmdroid.views.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        map:layout_constraintBottom_toTopOf="@+id/navigation" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/loaded_map_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/draw_polyline_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <com.hitomi.cmlibrary.CircleMenu
        android:id="@+id/edit_map_circle_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:clipToPadding="false"
        android:divider="@drawable/horizontal_bar_divider"
        android:orientation="horizontal"
        android:padding="4dp"
        android:showDividers="middle"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="310dp"
        android:layout_alignParentRight="true">

        <ImageButton
            android:id="@+id/recording_gps_btn"
            style="@style/RoundMapButton"
            android:background="@android:color/background_light"
            android:contentDescription="@string/map_control_undo"
            map:srcCompat="@drawable/ic_ready_record_24dp" />

        <ImageButton
            android:id="@+id/save_map"
            style="@style/RoundMapButton"
            android:onClick="ShowSaveMapDialog"
            android:background="@android:color/background_light"
            android:contentDescription="@string/map_control_edit"
            map:srcCompat="@drawable/ic_save_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="80dp"
        android:clipToPadding="false"
        android:divider="@drawable/vertical_bar_divider"
        android:orientation="vertical"
        android:padding="4dp"
        android:showDividers="middle"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="310dp"
        android:layout_alignParentRight="true">

        <ImageButton
            android:id="@+id/zoom_in"
            style="@style/RoundMapButton"
            android:background="@android:color/background_light"
            android:contentDescription="@string/map_control_zoom_in"
            map:srcCompat="@drawable/ic_add_circle_outline_black_24dp" />

        <ImageButton
            android:id="@+id/zoom_out"
            style="@style/RoundMapButton"
            android:background="@android:color/background_light"
            android:contentDescription="@string/map_control_zoom_out"
            map:srcCompat="@drawable/ic_remove_circle_outline_black_24dp" />

        <ImageButton
            android:id="@+id/location_track"
            style="@style/RoundMapButton"
            android:background="@android:color/background_light"
            android:contentDescription="@string/map_control_location"
            map:srcCompat="@drawable/ic_my_location_black_24dp" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation"
        android:layout_alignParentLeft="true" />

</RelativeLayout>