<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.AccountActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#fbf4ed"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:background="@drawable/account_page_background"
                    android:orientation="vertical"
                    tools:ignore="UselessLeaf">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        app:srcCompat="@drawable/ic_building_white_24dp" />

                    <TextView
                        android:id="@+id/account_page_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="Username"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <android.support.v7.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="205dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="KM"
                                android:textSize="20sp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="777"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:paddingTop="5dp"
                                android:textColor="@color/colorFavorite"/>
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Maps"
                                android:textSize="20sp"/>
                            <TextView
                                android:id="@+id/account_page_map_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="7"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:paddingTop="5dp"
                                android:textColor="@color/colorFavorite"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center" >
                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:paddingLeft="80dp"
                    android:paddingRight="90dp"
                    android:text="@string/btn_edit_profile"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/style_edit_profile_btn"
                    android:clickable="true"
                    android:focusable="true" />
                <Button
                    android:id="@+id/btn_app_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_settings_24dp"
                    android:paddingLeft="80dp"
                    android:paddingRight="90dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_app_settings"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/style_app_settings_btn"
                    android:clickable="true"
                    android:focusable="true" />
                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_log_out_24dp"
                    android:paddingLeft="80dp"
                    android:paddingRight="90dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_logout"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/style_logout_btn"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation"
        android:layout_alignParentLeft="true" >

    </android.support.design.widget.BottomNavigationView>
</RelativeLayout>